--- a/answer.html
+++ b/answer.html
@@ -278,7 +278,7 @@
         // Add click event handler to grid buttons
         // -----------------------------
         $(".grid-cell").click(function () {
-          if (gridAnswers.some((g) => g === this.data("text"))) {
+          if (gridAnswers.some((g) => g === $(this).data("text"))) {
             return;
           }
           $(this).addClass("bg-warning");
