--- a/answer.html
+++ b/answer.html
@@ -337,20 +337,18 @@
               wrongGrids++;
               continue;
             }
-            const cell = $(`.grid-cell[data-text="${g}"]`);
+            const cell = $(`.grid-cell[data-text='${g}']`);
+            const text = cell.data("text");
             let firstValue;
             let shifted = 0;
             do {
               firstValue = preGeneratedTexts.shift();
               shifted++;
-            } while (
-              preGeneratedTexts.length > 0 &&
-              firstValue.toLowerCase() !== cell.data("text").toLowerCase()
-            );
+            } while (preGeneratedTexts.length > 0 && firstValue !== text);
 
             gridsSkipped += shifted - 1;
 
-            if (firstValue.toLowerCase() === cell.data("text").toLowerCase()) {
+            if (firstValue === text) {
               cell.removeClass("bg-warning").addClass("bg-success");
               correctGrids++;
             }
