--- a/answer.html
+++ b/answer.html
@@ -13,6 +13,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/fflate@0.8.2"></script>
+    <script src="
+    https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
+    "></script>
     <style>
       /* Optional custom styles */
       h3 {
